add runcompose target